# guitarprotool

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.claude/agents/: qa-e2e-test-planner.md
docs/: ADAPTIVE_TEMPO_SYNC_PLAN.md  E2E_TEST_PLAN.md  GP8_FORMAT.md  MANUAL_TESTING.md  TRANSCRIPTION_ROADMAP.md
src/guitarprotool/: __init__.py  __main__.py
src/guitarprotool/cli/: __init__.py  main.py
src/guitarprotool/config/: __init__.py
src/guitarprotool/core/: __init__.py  audio_processor.py  bass_isolator.py  bcfz.py  beat_detector.py  drift_analyzer.py  format_handler.py  gp_file.py  notation_parser.py  sync_comparator.py  xml_modifier.py
src/guitarprotool/utils/: exceptions.py  logger.py
tests/: __init__.py  conftest.py  test_audio_processor.py  test_bass_isolator.py  test_bcfz.py  test_beat_detector.py  test_cli.py  test_drift_analyzer.py  test_format_handler.py  test_gp_file.py  test_notation_parser.py  test_sync_comparison.py  test_xml_modifier.py
tests/fixtures/: .gitignore  README.md
tests/fixtures/complex_intro/: input.gp  notes.md  youtube_url.txt
tests/fixtures/simple_song/: input.gp  notes.md  youtube_url.txt
