[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guitarprotool"
version = "0.1.0"
description = "Audio injection tool for Guitar Pro files (.gp, .gpx, .gp5) with automatic sync point detection"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jamie", email = "jamie@example.com"}
]
keywords = ["guitar-pro", "audio", "music", "automation", "beat-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "yt-dlp>=2024.0.0",
    "pydub>=0.25.1",
    "numpy>=1.24.0",
    "lxml>=5.0.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "pyguitarpro>=0.10.0",  # For reading GP3/GP4/GP5 binary formats
]

[project.optional-dependencies]
beat-detection = [
    "librosa>=0.10.0",
]
bass-isolation = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "demucs>=4.0.0",
]
full = [
    "guitarprotool[beat-detection,bass-isolation]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
guitarprotool = "guitarprotool.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=guitarprotool --cov-report=term-missing"
